--- a/sam-solutions/03_Filesystem_intro.tex
+++ b/sam-solutions/03_Filesystem_intro.tex
@@ -35,6 +35,7 @@
   \begin{itemize} 
     \item \alert{pwd}\footnote{см также переменные окружения \alert{PWD} и \alert{OLDPWD}} - получить текущий каталог
     \item \alert{cd [папка]}\footnote{\alert{cd} без параметров - возврат в домашний каталог} - сменить каталог
+    \item \alert{cd -}\footnote{Используется значение переменной \alert{OLDPWD}} - вернуться в предыдущий каталог
     \item \alert{ls [папка]}\footnote{\alert{ls} без параметров - просмотр текущего каталога} - просмотр списка файлов
     \item \alert{ls -l [папка]} - длинный листинг (c подробностями)
   \end{itemize}
@@ -93,7 +94,6 @@
 	\item \alert{символьные}: /dev/null, /dev/mem, /dev/tty
       \end{itemize}
   \end{itemize} \pause 
-
   Для программиста:
   \begin{itemize}
     \item \alert{FIFO (named pipe)}: /dev/xconsole
@@ -102,6 +102,50 @@
 
 \end{frame}
 
+\begin{frame}{Практика: определение типа файла}
 
+  \begin{itemize}
+    \item Используем \alert{ls -l}
+      \lstinputlisting[frame=single]{samples/ls-l}
+      Первая колонка, первый символ \pause
+
+    \item Определение типа файла: \alert{file}
+      \lstinputlisting[frame=single]{samples/file-usage}
+  \end{itemize} 
+\end{frame}
+
+\subsection{Работа с обычными файлами}
+
+\begin{frame}{Просмотр обычных файлов}
+  %\frametitle{Просмотр обычных файлов}
+  \begin{itemize}
+    \item Просмотр текста:
+      \begin{itemize} 
+	\item \alert{cat} - вывести на stdout\footnote{Для двоичных файлов: чревато порчей настроек терминала} \pause
+	\item \alert{more} - вывести, разбив на страницы
+	\item \alert{less}\footnote{может отсутствововать в стандартной поставке} - \alert{more} на стероидах, с прокруткой, поиском 
+      \end{itemize} \pause
+    \item Просмотр двоичных данных:\newline \alert{od} - дамп файла в не-текстовых форматах
+  \end{itemize}
+\lstinputlisting[frame=single,basicstyle=\tiny]{samples/od}
+
+\end{frame}
+
+\begin{frame}[fragile]{Создание (текстовых) файлов}
+  \pause
+  \begin{enumerate}
+    \item Любимым редактором: \alert{vi/vim}, \alert{nano}, \alert{mcedit} \pause
+    \item \alert{echo}
+\begin{lstlisting}[frame=single]
+echo какой-то текст >file
+\end{lstlisting}\pause
+    \item \alert{cat} с перенаправлением\footnote{До ``конца ввода'', т.е. нажатия Ctrl+D}
+\lstinputlisting[frame=single,basicstyle=\small]{samples/cat-input-file} \pause
+    \item \alert{touch} - создать пустой файл
+\begin{lstlisting}[frame=single]
+~$ touch file4
+\end{lstlisting}
+  \end{enumerate}
+\end{frame}
 
 \end{document}
