[SS] Start part4 (text processing)

--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -27,6 +27,8 @@
 \setmonofont{CMU Typewriter Text}
 
 \usepackage{listings}
+% for strike-out text
+\usepackage[normalem]{ulem}
 
 \author[Author, Vlad Shakhov]{Влад 'mend0za' Шахов\\Linux \& Embedded Team Leader}
 
