[SS] text processing - some about regexp

--- a/sam-solutions/04_Text_processing.tex
+++ b/sam-solutions/04_Text_processing.tex
@@ -105,24 +105,53 @@
 
   \alert{Упражнение 5}: то же, что и 4. Только для выходов. Дополнительно сохранить записи о ваших выходах в отдельный файл. \footnote{подсказка: + \alert{tee}}
 
-
-
-
-
 \end{frame}
 
 \begin{frame}{Изощрённые фильтры }
   \begin{itemize}
-    \item \alert{diff} (и \alert{diff -u}\footnote{Формат \alert{diff -u} : индустриальный стандарт пересылки списка изменений между версиями текстовых данных.}) - сравнить 2 файла и получить patch (изменения между ними)
+    \item \alert{diff} (и \alert{diff -u}\footnote{Формат \alert{diff -u} : индустриальный стандарт пересылки списка изменений между версиями текстовых данных. Активно используется в частности в различных системах хранения и управления исходным кодом}) - сравнить 2 файла и получить описание разницы (изменения между ними)
     \item \alert{patch} - утилита применения изменений от diff \pause
     \item \alert{sed} - не-интерактивный поточный редактор текста 
-    \item \alert{awk} - язык и утилита сканирования и обработки текста
+    \item \alert{awk} - язык и утилита сканирования и обработки текста \pause
   \end{itemize}
+  
+  \alert{Упражнение 1}: с помощью \alert{diff} получить разницу между своим профайлом .bashrc и пользователя ``user'' (/home/user/.bashrc)
+  
+  \alert{Упражнение 2}: создать файл патча в unified формате, на основе Упражнения 1.
+
 \end{frame}
+
 
 
 \section{Поиск в тексте. Регулярные выражения}
 
-% file /bin/*|grep symbolic
+\begin{frame}{Описываем текст}
+
+  \begin{block}{Как описать текст?}
+    Необходим инструмент и формат описания текста
+  \end{block} \pause
+
+  \begin{block}{Регулярные выражения}
+    \alert{Регулярные выражения (regular expression или regexp)} -  специальные строки символов, которые задаются для поиска совпадающих фрагментов. Иначе говоря это способ описания наборов букв. 
+  \end{block} \pause
+
+  \begin{block}{Универсальный язык описания текста}
+    Все Unix-программы, осуществляющие поиск в тексте, используют регулярные выражения.
+  \end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]{Элементы регулярных выражений}
+    \begin{itemize}
+      \item \alert{литералы} - обычные символы (буквы и цифры) \pause
+      \item \alert{метасимволы} - спецсимволы (количество повторов, группировка фрагментов, позиция в тексте).
+    \end{itemize} \pause 
+
+    Примеры регулярных выражений:\newline
+\begin{lstlisting}[frame=single]
+~$ file /bin/*|grep symbolic
+~$ grep -o 'user[0-9]*' /var/log/auth.log
+\end{lstlisting}
+\end{frame}
 
 \end{document}
