[SS] additional patch/diff excersise

--- a/sam-solutions/04_Text_processing.tex
+++ b/sam-solutions/04_Text_processing.tex
@@ -97,7 +97,7 @@
 \begin{frame}{Простые фильтры - упражнения}
   \alert{Упражнение 1}: посчитать сколько файлов в папке /bin\footnote{подсказка - \alert{wc} и \alert{ls}}
 
-  \alert{Упражнение 2}: сколько слов в первых 15 строках .basrc\footnote{подсказка - \alert{head} и \alert{ls}}
+  \alert{Упражнение 2}: сколько слов в первых 15 строках .bashrc\footnote{подсказка - \alert{head} и \alert{ls}}
 
   \alert{Упражнение 3}: найти, в каких файлах (и сколько их вообще) в области системных логов (каталог \alert{/var/log}) была записана информация о входе вашего пользователя в систему. \footnote{подсказка - \alert{grep} и, возможно, но необязательно, \alert{uniq}}
 
@@ -119,6 +119,7 @@
   
   \alert{Упражнение 2}: создать файл патча в unified формате, на основе Упражнения 1.
 
+  \alert{Упражнение 3}: создать Unified-патч между домашним каталогом другого пользователя (например user) и вашим домашним каталогом. Включить в патч все подкаталоги и файлы. 
 \end{frame}
 
 
