--- a/sam-solutions/04_Text_processing.tex
+++ b/sam-solutions/04_Text_processing.tex
@@ -149,16 +149,11 @@
     \end{itemize} \pause 
 
     Примеры регулярных выражений:\newline
-\begin{lstlisting}[frame=single]
+\begin{lstlisting}
 ~$ file /bin/*|grep symbolic
 ~$ grep -o 'user[0-9]*' /var/log/auth.log
 \end{lstlisting}
 \end{frame}
-
-\newcommand{\tbs}{\tt\char`\\}
-\newcommand{\regex}[1]{ %
-\expandafter{$\ulcorner{\color{blue}\texttt{#1}}\lrcorner$} %
-}
 
 
 \subsection{Метасимволы}
