[SS] introduce \firstslide command

--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -40,6 +40,11 @@
 \expandafter{$\ulcorner{\color{blue}\texttt{#1}}\lrcorner$} %
 }
 
+\newcommand{\firstframe}{ %
+\begin{frame} %
+  \titlepage %
+\end{frame} %
+}
 
 \author[Author, Vlad Shakhov]{Влад 'mend0za' Шахов\\Linux \& Embedded Team Leader}
 
