--- a/sam-solutions/03_Filesystem_intro.tex
+++ b/sam-solutions/03_Filesystem_intro.tex
@@ -8,9 +8,8 @@
 }
 
 \begin{document}
-\begin{frame}
-  \titlepage
-\end{frame}
+
+\firstframe
 
 \section{Общие сведения}
 \begin{frame}{Определения}
