[SS] \qatrainingtitle command

--- a/sam-solutions/01_Intro_to_linux.tex
+++ b/sam-solutions/01_Intro_to_linux.tex
@@ -1,10 +1,6 @@
 \include{linux-qa-common}
 
-\title[SaM Solutions. Linux QA Training]
-{
-  Часть 1.\\
-  Введение в Linux.
-}
+\qatrainingtitle{1}{Введение в Linux}
 
 \begin{document}
 
