--- a/sam-solutions/02_Bourne_shell.tex
+++ b/sam-solutions/02_Bourne_shell.tex
@@ -1,11 +1,7 @@
 \include{linux-qa-common}
 
 
-\title[SaM Solutions. Linux QA Training]
-{
-  Часть 2.\\
-  Bourne Shell aka POSIX sh.
-}
+\qatrainingtitle{2}{Bourne Shell aka POSIX sh}
 
 \begin{document}
 
