--- a/sam-solutions/03_Filesystem_intro.tex
+++ b/sam-solutions/03_Filesystem_intro.tex
@@ -1,11 +1,7 @@
 \include{linux-qa-common}
 
 
-\title[SaM Solutions. Linux QA Training]
-{
-  Часть 3.\\
-  Файловая система, введение
-}
+\qatrainingtitle{3}{Файловая система, введение}
 
 \begin{document}
 
