--- a/sam-solutions/04_Text_processing.tex
+++ b/sam-solutions/04_Text_processing.tex
@@ -1,11 +1,6 @@
 \include{linux-qa-common}
 
-
-\title[SaM Solutions. Linux QA Training]
-{
-  Часть 4.\\
-  Обработка текста.
-}
+\qatrainingtitle{4}{Обработка текста}
 
 \begin{document}
 
