--- a/sam-solutions/05_Filesystem_access_rights.tex
+++ b/sam-solutions/05_Filesystem_access_rights.tex
@@ -1,11 +1,6 @@
 \include{linux-qa-common}
 
-\title[SaM Solutions. Linux QA Training]
-{
-  Часть 5.\\
-  Файловая система и права доступа.\\
-  Пользователи, группы.
-}
+\qatrainingtitle{5}{Файловая система и права доступа.\\Пользователи, группы.}
 
 \lstset{basicstyle=\tiny}
 
