--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -40,6 +40,16 @@
 \expandafter{$\ulcorner{\color{blue}\texttt{#1}}\lrcorner$} %
 }
 
+% \qatrainingtitle
+\newcommand{\qatrainingtitle}[2] {%
+\title[SaM Solutions. Linux QA Training] %
+{ %
+  Часть #1.\\%
+  #2 %
+}
+
+}
+
 \newcommand{\firstframe}{ %
 \begin{frame} %
   \titlepage %
