[SS] some local changes during lecture

--- a/sam-solutions/05_Filesystem_access_rights.tex
+++ b/sam-solutions/05_Filesystem_access_rights.tex
@@ -60,16 +60,13 @@
 \end{frame}
 
 \begin{frame}{Практика: Управление владельцами файла}
-
+  
   \alert{Упражнение 1.} Узнать имена своих групп, первичную группу.\newline
-
   \alert{Упражнение 2.} В папке /tmp создать файл с произвольным именем. 
   Сменить группу-владельца файла на другую (из списка своих групп). 
   Проверить доступность файла на редактирование и удаление.\newline
- 
   \alert{Упражнение 3.} В папке /tmp создать файл с произвольным именем.
   Сменить пользователя-владельца файла на другого (одного из определённых в системе).  Проверить доступность файла на редактирование и удаление. \newline
-
   \alert{Упражнение 4.} В папке /tmp создать каталог с произвольным именем. Скопировать в него несколько файлов из своего домашнего каталога. Рекурсивно сменить группу-владельца (см Упражнение 2) и пользователя-владельца (см Упражнение 3). Проверить доступ к созданным файлам и каталогам.
 
 \end{frame}
@@ -140,7 +137,8 @@
   \begin{block}{Каталоги}
     \begin{itemize}
       \item \alert{(r)} позволяет получить имена (и только имена) файлов в нём\footnote{ls dir}. 
-      \item \alert{x} позволяет "выполнить" каталог\newline
+      \item \alert{(w)} TODO 
+      \item \alert{(x)} позволяет "выполнить" каталог\newline
 	то есть заглянуть в метаданные  и получить полную информацию о каталоге и файлах в нём\footnote{ls -l dir}.
     \end{itemize}
   \end{block}
