--- a/sam-solutions/06_Processes.tex
+++ b/sam-solutions/06_Processes.tex
@@ -26,9 +26,13 @@
 
 \begin{frame}{Файлы и процессы. Права доступа}
 
-  Процессы запускаются из файлов (двоичных программ или скриптов).
+  \begin{block}{Связь с файлами}
+    Процессы запускаются из файлов (двоичных программ или скриптов).
+  \end{block}
 
-  Процессы работают с правами пользователя, их запустившего\footnote{Если не установлены SUID или SGID биты на файле программы}
+  \begin{block}{Права доступа}
+    Процессы работают с правами пользователя, их запустившего\footnote{Если не установлены SUID или SGID биты на файле программы}
+  \end{block}
 
 \end{frame}
 
@@ -52,19 +56,91 @@
 
 \end{frame}
 
-\begin{frame}{Практика: утилиты просмотр процессов}
-    \begin{itemize}
+\begin{frame}[fragile]{Практика: утилиты просмотр процессов}
+    
+  \begin{itemize}
       \item \alert{ps} - список запущенных процессов.\newline
 	Популярные ключи: \alert{-u username}, 
 	\alert{ax}\footnote{ \alert{ax} для BSD, \alert{-e} в SystemV}, 
 	\alert{aux}\footnote{ \alert{aux} для BSD, \alert{-ef} в SystemV}
-\lstinputlisting{samples/ps-ax
+\lstinputlisting{samples/ps-ax}
       \item \alert{top} - интерактивный список процессов
 \lstinputlisting{samples/top}
     \end{itemize}
+
+\end{frame}
+
+\begin{frame}{Состояния процесса}
+  % TODO
+\end{frame}
+
+\begin{frame}{Виды межпроцессного взаимодействия (IPC)}
+
+  \begin{block}{Пользовательские IPC}
+    \begin{enumerate}
+      \item \alert{файлы}
+      \item \alert{каналы (трубы)} - именованные (FIFO) и неименованные (в Shell)\pause
+      \item \alert{сигналы} - уведомление о возникновении события
+    \end{enumerate}
+  \end{block}\pause
+
+  \begin{block}{IPC Для программистов}
+    \begin{enumerate}
+      \item \alert{разделяемая память}
+      \item \alert{семафоры}
+      \item \alert{очереди сообщений}
+    \end{enumerate}
+  \end{block}
+
 \end{frame}
 
 \section{Сигналы}
+
+
+\begin{frame}{Сигналы}
+  \begin{block}{Сигнал}
+    \begin{enumerate}
+      \item Cпособ передачи уведомления о возникновении какого-либо события.
+      \item Сигнал может идти от одного процесса другому или от ядра ОС какому-либо процессу.
+      \item Номер сигнала - единственная информация, которую он передаёт.
+    \end{enumerate}
+  \end{block} \pause
+
+  \begin{block}{Права доступа}
+    \begin{itemize}
+      \item Пользователь может посылать сигналы только тем процессам, владельцем которых он является.
+      \item \alert{root} может посылать сигналы любому процессу.
+    \end{itemize}
+  \end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]{Работа с сигналами}
+  \small Информация о сигналах: \alert{man 7 signal}, \alert{kill -l}
+  \begin{block}{Популярные сигналы}
+    \tiny
+    \begin{tabular}{l|c|c|l}
+      Сигнал & Значение & Действие
+      .умолч.& Комментарий \\ \hline 
+      SIGHUP &    1     &  Term   &  Обрыв соед. терминала или смерть упр. процесса \\
+      SIGINT &    2     &  Term   & Прерывание с клавиатуры (Ctrl+C) \\
+      SIGKILL &   9    &  Term   & Убить процесс \\
+      SIGSEGV &   11    &  Core   & Segmentation fault \\
+      SIGPIPE &   13    &  Term   & Broken pipe: запись в канал без читателей\\
+      SIGTERM &   15    &  Term   & Прекратить процесс \\
+      SIGCONT &  19,18,25 &  Cont & Продолжить выполнение \\
+      SIGSTOP &  17,19,23 &  Stop & Остановить 
+    \end{tabular}
+  \end{block} \pause
+
+  \begin{block}{Утилиты управления}
+    \begin{itemize}
+      \item \alert{kill} - послать сигнал процессу (по PID)
+      \item \alert{killall} - послать сигнал процессам по имени
+    \end{itemize}
+  \end{block}
+
+\end{frame}
 
 \section{Shell и фоновые задания}
 
