--- a/slides/bash/arithmetic.tex
+++ b/slides/bash/arithmetic.tex
@@ -9,7 +9,7 @@
     \end{block}
    \item  {\tt let}
     \begin{block}{Примеры}
-     {\tt let a=10; echo \$a; let a+=-2; echo \$a; echo \$(( --a)); echo \$a} 
+     {\tt let a=10; echo \$a; let a+=-2; echo \$a; echo \$(( $--$a)); echo \$a} 
     \end{block}
    \item  {\tt expr } внешняя команда 
     \begin{block}{Пример}
@@ -21,7 +21,7 @@
 \begin{frame}[fragile]
 \frametitle{Операторы в арифметических выражениях}
 \begin{enumerate}
-\item Инкременты, декременты {\tt id++, id--, ++id, --id } 
+\item Инкременты, декременты {\tt id++, id$--$, ++id, $--$id } 
 \item Арифметические операторы {\tt **,*,/,\%,+,-} 
 \item Побитовые операторы {\verb+ ~,>>,<<,^,&,|+}
 \item Операторы сравнения {\tt <=,>=,<,>, ==, !=}
